@@ -4,6 +4,9 @@ Changelog
 2.0 (Unreleased)
 ----------------
 
+- Removed testing dependency on CMFCalendar.
+  [hannosch]
+
 - Removed references to error_log.
   [hannosch]
 
